--- a/menuinicialcss.css
+++ b/menuinicialcss.css
@@ -1,12 +1,12 @@
-*{
-    background: url(images/b.jpg);
+html{
+  background: url(images/b.jpg);
   padding: 0;
   margin: 0;
+  text-align: center;
 }
 
 .menu {
     margin-top: 350px;
-    margin-left: 800px;
 }
 
 .menu input {
