--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url(http://fonts.googleapis.com/css?family=Cinzel+Decorative:400,700,900);
+
 html {  
   background: url(images/b.jpg)
   no-repeat center center fixed; 
@@ -79,10 +81,33 @@ color:white;
 
 }
 
+$heading-color: #201D16;
+
 header h1{
-  color:white;
+ /*color:white;
   margin-bottom: 100px;
-  font-size: 100px;
+  font-size: 100px;*/
+   @include typesetter(3, 0.90){ 
+    $tweak : 4px; 
+    margin-top: - $tweak;
+    margin-bottom:$tweak;
+  } 
+  @media (max-width:420px){
+    @include typesetter(2, 0.9){
+      $tweak : 10px; 
+      margin-top: - $tweak;
+      margin-bottom:$tweak;
+    };
+  }  
+}
+
+header h1 {
+  color:$heading-color; 
+  font-weight:700;
+  font-family:'Cinzel Decorative';
+  color:white; 
+  margin-bottom: 80px;
+  font-size: 90px;
 }
 
 #Register h2{
@@ -121,3 +146,4 @@ color:#6E6E6E;
   border-top:1px solid rgba(255,255,255,0.8)!important;
   -webkit-box-reflect: below 0px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(50%, transparent), to(rgba(255,255,255,0.2)));
 }
+
