--- a/menuinicialcss.css
+++ b/menuinicialcss.css
@@ -62,7 +62,7 @@ nav ul li {
   float:left;
 }
 nav ul li:hover {
-  background-color:#c00;
+  background-color:#036;
 }
 nav ul li:hover a {
   color:#fff;
