--- a/listPollscss.css
+++ b/listPollscss.css
@@ -13,22 +13,22 @@ html {
 
 ul {
     list-style-type: none;
-    padding: 0;
+    padding: 0px;
+    margin: 0px;
 
 }
 
 a {
     display: block;
     padding: 9px 10px 5px 10px;
-    border-bottom: 1px solid #E7E7E7;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box; 
     text-decoration: none;
     font-family: Helvetica, Arial, sans-serif;
-    font-size: 18px;
+    font-size: 14px;
     font-weight: bold;
     color: white;
+    border-bottom:0px solid #c00;
 }
+
 
 ul#navigation li a {
 -webkit-border-radius: 24px;
