--- a/listPollscss.css
+++ b/listPollscss.css
@@ -11,26 +11,15 @@ html {
   color:white;
 }
 
-ul {
-    list-style-type: none;
-    padding: 0px;
-    margin: 0px;
+table{
 
+    text-align: center;
+    margin-left:auto; 
+    margin-right:auto;
+     width:70%; 
 }
 
-a {
-    display: block;
-    padding: 9px 10px 5px 10px;
-    text-decoration: none;
-    font-family: Helvetica, Arial, sans-serif;
-    font-size: 14px;
-    font-weight: bold;
-    color: white;
-    border-bottom:0px solid #c00;
-}
-
-
-ul#navigation li a {
+#navigation p a {
 -webkit-border-radius: 24px;
    -moz-border-radius: 24px;
    border-radius: 24px;
@@ -50,13 +39,13 @@ text-decoration: none;
 
 }
 
-ul#navigation li a:hover
+#navigation p a:hover
 {
 color: #FFF;
 background-color: #69C;
 }
 
-ul#navigation .left
+#navigation .left
 {
 float: left;
 width: 5em;
